{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 111,
  "lineage": "a5183b72-3674-1120-b2d7-797963fb38d9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "master_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:092712819043:security-group/sg-0485d28f271f97bf6",
            "description": "SG untuk Master Node Kubernetes",
            "filter": null,
            "id": "sg-0485d28f271f97bf6",
            "name": "Master-Node-SG",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02adc4254d8751aa1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:092712819043:security-group/sg-05b07c6a85d18c6c3",
            "description": "SG untuk Worker Node Kubernetes",
            "filter": null,
            "id": "sg-05b07c6a85d18c6c3",
            "name": "Worker-Node-SG",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02adc4254d8751aa1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb840c267c9798a4",
            "arn": "arn:aws:ec2:ap-southeast-3:092712819043:instance/i-00b46dd3eabdcda92",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b46dd3eabdcda92",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "TLab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-084341622a0d4ed72",
            "private_dns": "ip-172-31-2-82.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.82",
            "public_dns": "ec2-43-218-142-248.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "43.218.142.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05470efe4106304e2",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Master-Node-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bdf2fc1ee0ed98bf",
            "tags": {
              "Name": "Master-Node"
            },
            "tags_all": {
              "Name": "Master-Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0485d28f271f97bf6"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_security_group.master_node_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb840c267c9798a4",
            "arn": "arn:aws:ec2:ap-southeast-3:092712819043:instance/i-03355812824964439",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03355812824964439",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "TLab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034220a5f3f5b630c",
            "private_dns": "ip-172-31-8-17.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.8.17",
            "public_dns": "ec2-108-137-130-251.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "108.137.130.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053a1a5824fb2f93d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Worker-Node-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bdf2fc1ee0ed98bf",
            "tags": {
              "Name": "Worker-Node-1"
            },
            "tags_all": {
              "Name": "Worker-Node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b07c6a85d18c6c3"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_security_group.worker_node_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb840c267c9798a4",
            "arn": "arn:aws:ec2:ap-southeast-3:092712819043:instance/i-08f76ee9cb463c469",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f76ee9cb463c469",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "TLab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01aaec8dec636fb21",
            "private_dns": "ip-172-31-15-85.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.85",
            "public_dns": "ec2-108-136-246-223.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "108.136.246.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aabb15a571b6f0c3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Worker-Node-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bdf2fc1ee0ed98bf",
            "tags": {
              "Name": "Worker-Node-2"
            },
            "tags_all": {
              "Name": "Worker-Node-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b07c6a85d18c6c3"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_security_group.worker_node_sg"
          ]
        }
      ]
    }
  ]
}